Adding net-tools, ssh, and mailcatcher

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -27,6 +27,10 @@ serverurl=http://127.0.0.1:9001
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 
+[program:mailcather]
+command=/bin/bash -c "source /usr/local/rvm/scripts/rvm && exec /usr/local/rvm/gems/ruby-2.2.4/bin/mailcatcher --ip 0.0.0.0"
+
+
 
 
 ;autostart=true                 ; start at supervisord start (default: true)
@@ -35,3 +39,6 @@ command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFO
 
 [program:mysql]
 command = /usr/bin/pidproxy /var/run/mysqld/mysqld.pid /usr/bin/mysqld_safe
+
+[program:sshd]
+command = /usr/sbin/sshd -D
