--- a/supervisord.conf
+++ b/supervisord.conf
@@ -42,3 +42,8 @@ command = /usr/bin/pidproxy /var/run/mysqld/mysqld.pid /usr/bin/mysqld_safe
 
 [program:sshd]
 command = /usr/sbin/sshd -D
+
+[program:cron]
+command = /usr/sbin/cron -f -L 15
+autostart=true
+autorestart=true
